--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 	background: #CCF;
 	text-align: center;
 	cursor: move;
+	margin: 1px;
+	float:left;
 }
 .wordcontainer {
 	padding: .3em .15em .3em .15em;
@@ -23,6 +25,10 @@
 	background: #bbb;
 }
 .sentence {
-	mragin: 0;
+	margin: 0;
 	text-align: center;
+}
+.notes {
+	text-align: center;
+	font-size: small;
 }
