Added the beginning of a user system, and a templating system. Switched over the pages from HTML to cgi, since there are enough to need the templating system and I'm doing some server-side things with them now.

--- a/style.css
+++ b/style.css
@@ -44,3 +44,11 @@ body {
 	height: 1em;
 	float: right;
 }
+.userbox {
+	margin-left: auto;
+	margin-right: auto;
+	background: #fff;
+	width: 400px;
+	text-align: center;
+	border: 1px solid #000;
+}
