Made chat a lot more pleasant, although it doesn't auto-scroll yet, its position changes as the state changes, and pressing enter or w/e to send doesn't work.

--- a/style.css
+++ b/style.css
@@ -52,3 +52,17 @@ body {
 	text-align: center;
 	border: 1px solid #000;
 }
+
+.chat {
+	margin-left: auto;
+	margin-right: auto;
+	background: #fff;
+	width: 50em;
+	text-align: left;
+	border: 1px solid #000;
+}
+
+.chatmsgs {
+	height: 15em;
+	overflow: auto;
+}
