--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ body {
 	height: 20.6em;
 	background: #024;
 }
+.gamebox {
+	height: 25em;
+}
 .dropbox {
 	border-top: 0;
-/*	height: 1.3em;*/
 	background: #bbb;
 	height: auto;
 }
@@ -65,4 +67,13 @@ body {
 .chatmsgs {
 	height: 15em;
 	overflow: auto;
+}
+
+.notification {
+	margin-left: auto;
+	margin-right: auto;
+	background: #fff;
+	width: 600px;
+	text-align: center;
+	border: 1px solid #000;
 }
