Scores are now tracked and are to the right of usernames, again.
Conflicts:

	amalgam.js
	index.cgi

--- a/style.css
+++ b/style.css
@@ -163,8 +163,16 @@ body {
 	border-right: 1px solid #cccccc;
 }
 
+#membertable {
+	width: 100%;
+}
+
 .username {
-	color: #440000;
+	color: #006600;
+}
+
+.score { 
+	text-align: right;
 }
 
 .chatmsgs {
