--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* -*- tab-width: 4; indent-tabs-mode: t; -*- */
-
 body {
 	background: #751919;
 	background-image: url('images/background.png');
@@ -110,11 +108,6 @@ body {
 }
 .clear {
 	clear: both;
-}
-.prop {
-	padding: 7px 0px 7px 0px;
-	height: 1em;
-	float: right;
 }
 .userbox {
 	margin-left: auto;
@@ -271,3 +264,21 @@ body {
 .winner {
 	color: #ff9090;
 }
+
+.clearwords {
+	float: right;
+	padding: 1px 4px 1px 4px;
+	border: 1px outset #ccf;
+	background: #ccccff;
+	text-align: center;
+	margin: 3px;
+	font-size: 0.8em;
+	line-height: 1.5em;
+	font-weight: bold;
+	font-family: Tahoma, Verdana, Sans;	
+}
+
+.clearwords a {
+	text-decoration: none;
+}
+
