--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -14,6 +14,8 @@ body {
 	line-height: 1.5em;
 	font-weight: bold;
 	font-family: Tahoma, Verdana, Sans;	
+user-select: none;
+
 }
 .spacer {
 	padding: 1px 4px 1px 4px;
