--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -68,7 +68,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	float: none;
-	width: 596px;
+	width: 896px;
 }
 .sentence {
 	margin: 0;
@@ -78,6 +78,7 @@ body {
 	font-size: 0.7em;
 	font-family: Tahoma, Verdana, Sans;
 	font-weight: bold;
+        padding-bottom: 30px;
 }
 #footer {
 	width: 600px;
