--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -80,6 +80,10 @@ body {
 	font-weight: bold;
         padding-bottom: 30px;
 }
+
+.sentence .voted {
+    font-size: 1.2em;
+}
 #footer {
 	width: 600px;
 	margin-left: auto;
