--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -280,6 +280,29 @@ body {
     color: #eeeeee;
 }
 
+.winners td {
+	border: 1px dotted #ffe890;
+	padding: 4px;
+	background: #550909;
+}
+
+#gameover table {
+	border: 0px;
+	border-spacing: 0px;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 15px
+}
+
+
+#gameover td {
+	border: 1px dotted #ffe890;
+	padding: 4px;
+	background: #550909;
+}
+
+
 .winner {
 	color: #ff9090;
 }
